k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gocep-api
  namespace: gocep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gocep-api
  template:
    metadata:
      labels:
        app: gocep-api
    spec:
      containers:
        - name: api
          image: victordias21/gocep:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gocep-api
  namespace: gocep
spec:
  selector:
    app: gocep-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
